add persons list

--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "react-app-rewire-postcss": "^3.0.2",
     "react-app-rewire-sass-rule": "^2.1.1",
     "react-app-rewired": "^2.1.6",
+    "react-error-overlay": "^6.0.9",
     "sass-loader": "^8.0.2"
   },
   "browserslist": {
